<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_library"
        android:name="br.com.fenix.mangareader.ui.library.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/nav_history"
        android:name="br.com.fenix.mangareader.ui.library.LibraryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_config"
        android:name="br.com.fenix.mangareader.ui.library.LibraryFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/nav_help"
        android:name="br.com.fenix.mangareader.ui.library.LibraryFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

</navigation>