<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/floating_buttons_content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/floating_buttons"
    android:paddingBottom="30dp">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="@dimen/page_link_buttons_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/floating_buttons_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:contentDescription="@string/page_link_reorder_auto"
            android:text="@string/page_link_reorder_auto"
            android:layout_gravity="start"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            app:rippleColor="@color/secondary"
            app:strokeWidth="0dp"
            app:backgroundTint="@color/floating_buttons_close"
            app:icon="@drawable/ic_close"
            app:iconTint="@color/text_primary"
            app:iconSize="20dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/floating_buttons_page_linked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:contentDescription="@string/page_link_reorder_dual_page"
            android:text="@string/page_link_reorder_dual_page"
            android:layout_gravity="start"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            app:rippleColor="@color/secondary"
            app:strokeWidth="0dp"
            app:backgroundTint="@color/floating_buttons"
            app:icon="@drawable/ic_page_linked"
            app:iconTint="@color/text_primary"
            app:iconSize="20dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/floating_buttons_draw_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:contentDescription="@string/page_link_reorder_single_page"
            android:text="@string/page_link_reorder_single_page"
            android:layout_gravity="start"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            app:rippleColor="@color/secondary"
            app:strokeWidth="0dp"
            app:backgroundTint="@color/floating_buttons"
            app:icon="@drawable/ic_draw_text"
            app:iconTint="@color/text_primary"
            app:iconSize="23dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/floating_buttons_floating_window"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/page_link_reorder_sorted_page"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/page_link_reorder_sorted_page"
            android:textAllCaps="false"
            android:textColor="@color/text_primary"
            app:backgroundTint="@color/floating_buttons"
            app:icon="@drawable/ic_floating_window"
            app:iconSize="20dp"
            app:iconTint="@color/text_primary"
            app:rippleColor="@color/secondary"
            app:strokeWidth="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/floating_buttons_file_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:contentDescription="@string/page_link_delete_file_link"
            android:text="@string/page_link_delete_file_link"
            android:layout_gravity="start"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            app:rippleColor="@color/secondary"
            app:strokeWidth="0dp"
            app:backgroundTint="@color/floating_buttons"
            app:icon="@drawable/ic_file_link"
            app:iconTint="@color/text_primary"
            app:iconSize="20dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/floating_buttons_move_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:contentDescription="@string/page_link_delete_file_link"
            android:text="@string/page_link_delete_file_link"
            android:layout_gravity="start"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            app:rippleColor="@color/secondary"
            app:strokeWidth="0dp"
            app:backgroundTint="@color/floating_buttons"
            app:icon="@drawable/ic_floating_button_change_right"
            app:iconTint="@color/text_primary"
            app:iconSize="20dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>
